# lava

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile_shaders.sh  draft.drawio
archives/: init.cpp
include/: lvcleanup.hpp  lvinit.hpp  lvrun.hpp
shaders/: add.comp
src/: example.cpp  lvcleanup.cpp  lvinit.cpp  lvrun.cpp  main.cpp
